syntax = "proto3";

option csharp_namespace = "Service";

package toDo;
import "google/protobuf/timestamp.proto";

service ToDo
{
	rpc AddItem (.toDo.AddRequest) returns (.toDo.AddReply);

	rpc ListItems (.toDo.ListRequest) returns (stream .toDo.ToDoItem);
}

message ToDoItem
{
	int32 id = 1;
	string title = 2;
	string description = 3;
	google.protobuf.Timestamp due_date = 4;
	Priority priority = 5;
	repeated string tags = 6;

	enum Priority
	{
		Lowest = 0;
		Low = 1;
		Normal = 2;
		High = 3;
		Highest = 4;
	}
}

message AddRequest
{
	.toDo.ToDoItem item = 1;
}

message AddReply
{
	.toDo.Response response = 1;
}

enum Response
{
	Ok = 0;
	Error = 1;
}

message ListRequest
{

}